fixed visibility issue of search box results

--- a/frontend/src/styles/searchresults.css
+++ b/frontend/src/styles/searchresults.css
@@ -7,10 +7,16 @@
     position: absolute;
     max-height: 150px;
     overflow: scroll;
+    overflow-x: hidden;
 }
 
 .search-result {
     border-bottom: 1px solid gray;
     padding: 2px;
     margin: 3px;
+    transition: 0.2s all ease-in-out;
+}
+
+.search-result:hover {
+    background-color: #b68b4b;
 }
